tests/baselines/reference/parserErrorRecovery_ArgumentList4.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ArgumentList4.ts (4 errors) ====
    function foo() {
       bar(a,b
       ~~~
!!! parserErrorRecovery_ArgumentList4.ts(2,4): error TS2095: Cannot find name 'bar'.
           ~
!!! parserErrorRecovery_ArgumentList4.ts(2,8): error TS2095: Cannot find name 'a'.
             ~
!!! parserErrorRecovery_ArgumentList4.ts(2,10): error TS2095: Cannot find name 'b'.
       return;
       ~~~~~~
!!! parserErrorRecovery_ArgumentList4.ts(3,4): error TS1005: ',' expected.
    }